<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/result"
            android:textDirection="rtl"
            android:gravity="bottom"
            android:textSize="50dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:text="@string/button_1"
            android:textSize="30dp"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_2"
            android:text="@string/button_2"
            android:textSize="30dp"

            />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_3"
            android:text="@string/button_3"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_plus"
            android:text="@string/button_plus"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_4"
            android:text="@string/button_4"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_5"
            android:text="@string/button_5"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_6"
            android:text="@string/button_6"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_sub"
            android:text="@string/button_sub"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_7"
            android:text="@string/button_7"
            android:textSize="30dp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_8"
            android:text="@string/button_8"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_9"
            android:text="@string/button_9"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_0"
            android:text="@string/button_0"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_mul"
            android:text="@string/button_mul"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_div"
            android:text="@string/button_div"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_C"
            android:text="@string/button_C"
            android:textSize="30dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:id="@+id/button_equal"
            android:text="@string/button_equal"
            android:textSize="30dp" />
    </LinearLayout>

</LinearLayout>
